<resources>
    <string name="app_name">TecnoClick</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="categoria">Categoria</string>
    <string name="perfiles">Perfiles</string>
    <string name="categorias">categorias</string>
    <string name="Categorias">Categorias</string>
    <string name="inicio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ofertas">Ofertas</string>
    <string name="novedades">Novedades</string>
    <string name="mis_ordenes">Mis Ordenes</string>
    <string name="carrito_de_compra">Carrito de compra</string>
</resources>