<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/perfiles" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/Categorias" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/offers"
            android:title="@string/ofertas" />

        <item
            android:id="@+id/nav_new_products"
            android:icon="@drawable/refresh"
            android:title="@string/novedades" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/my_orders"
            android:title="@string/mis_ordenes" />

        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/cart"
            android:title="@string/carrito_de_compra" />
    </group>
</menu>