<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ni.avalon.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ni.avalon.ui.profile.ProfileFragment"
        android:label="@string/perfiles"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.ni.avalon.ui.category.CategoryFragment"
        android:label="@string/Categorias"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_offers"
        android:name="com.ni.avalon.ui.offers.OffersFragment"
        android:label="@string/ofertas"
        tools:layout="@layout/fragment_offers" />
    <fragment
        android:id="@+id/nav_new_products"
        android:name="com.ni.avalon.ui.newProducts.NewProductsFragment"
        android:label="@string/novedades"
        tools:layout="@layout/fragment_new_products" />
    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.ni.avalon.ui.orders.MyOrdersFragment"
        android:label="@string/mis_ordenes"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_my_carts"
        android:name="com.ni.avalon.ui.cart.MyCartsFragment"
        android:label="@string/carrito_de_compra"
        tools:layout="@layout/fragment_my_carts" />
</navigation>